modules/sg/main.tf
resource "aws_security_group" "lb" {
  name   = "allow-all-lb"
  vpc_id = var.vpc_id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "env"       = "dev"
    "createdBy" = "siraj"
  }
}
resource "aws_security_group" "ec2-public-sg" {
  name        = "allow-http-ssh-https"
  description = "allow all"
  vpc_id      = var.vpc_id

  ingress {
    self = false
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    self = false
    from_port = 1000
    to_port = 65535
    protocol = "tcp"
    security_groups = [aws_security_group.lb.id]
  }
  ingress {
    self = false
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    self = false
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Terraform-EC2-sg"
  }
}
